<resources>
    <string name="app_name">OnlineBloodBank</string>
    <string name="online_blood_bank">Online Blood Bank</string>
    <string name="register_here">Register Here</string>
    <string name="fname">Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account_login">Already have an account?Login!</string>
    <string name="user_name">User Name</string>
    <string name="username"></string>
    <string name="name"></string>
    <string name="city_corporetion">City Corporetion</string>
    <string name="division">Division</string>
    <string name="union">Union</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="phone"></string>
    <string name="email"></string>
    <string name="emailt">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="full_name">Full Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="welcome">Welcome</string>
    <string name="to_online_blood_bank_devoted_for_humanity">To Online Blood Bank Devoted For Humanity</string>
    <string name="textview1">Password</string>
    <string name="username_Login"></string>
    <string name="textview2">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_any_account_register_here">"Don't have any account?Register Here."</string>
    <string name="textview3">Email</string>
    <string name="choose_a_strong_password">Choose a strong Password</string>
    <string name="put_your_password">Put your password</string>
    <string name="put_your_username">Put your Email</string>
    <string name="desc">Image</string>
    <string name="descadmin">Image</string>
    <string name="textview4">Welcome Looking for Blood? Search here!</string>
    <string name="textview5">Needed Blood Group</string>
    <string name="textview6">Division</string>
    <string name="textview7">District</string>
    <string name="textview8">Union</string>
    <string name="textview9">City Corporation</string>
    <string name="button10">Button</string>
    <string name="textview11">Available Donor</string>
    <string name="textview12">Welcome</string>
    <string name="textview14">Password</string>
    <string name="textview15">Email</string>
    <string name="textview13">To Online Blood Bank Devoted For Humanity</string>
    <string name="name16"></string>
    <string name="admins_username">Put Your Email</string>
    <string name="admins_password">Put Your Password</string>
    <string name="button_admin_1">Login</string>
    <string name="button_admin_2">Login as User</string>
    <string name="textview16">Admin Panel</string>
    <string name="textview_up_1">Update Your Profile</string>
    <string name="textview_up_2">Name</string>
    <string name="textview_up_3">Username</string>
    <string name="textview_up_4">Email</string>
    <string name="textview_up_5">Phone</string>
    <string name="textview_up_6">Blood Group</string>
    <string name="textview_up_7">Password</string>
    <string name="textview_up_8">Address</string>
    <string name="textview_up_9">Division</string>
    <string name="textview_up_10">District</string>
    <string name="textview_up_11">Union</string>
    <string name="textview_up_12">City Corporation</string>
    <string name="Update_name"></string>
    <string name="Update_u_name"></string>
    <string name="Update_Email"></string>
    <string name="Update_phone"></string>
    <string name="upname">Update your name</string>
    <string name="up_uname">Update your Username</string>
    <string name="up_mail">Update your Email</string>
    <string name="up_phon">Update your phone</string>
    <string name="up_pass_hnt">Update your password</string>
    <string name="Update_btn">Update</string>



</resources>