<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileUpdate">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="271dp"
        android:layout_height="53dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/textview_up_1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:text="@string/textview_up_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/textview_up_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/textview_up_4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/textview_up_5"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="235dp"
        android:layout_marginRight="235dp"
        android:text="@string/textview_up_6"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/textview_up_7"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="369dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/textview_up_8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/textview_up_9"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/textview_up_11"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="65dp"
        android:text="@string/textview_up_12"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinner15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:text="@string/textview_up_10"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:autofillHints="@string/upname"
        android:hint="@string/upname"
        android:inputType="textPersonName"
        android:text="@string/Update_name"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:autofillHints="@string/up_uname"
        android:hint="@string/up_uname"
        android:inputType="textPersonName"
        android:text="@string/Update_u_name"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:autofillHints="@string/up_mail"
        android:hint="@string/up_mail"
        android:inputType="textPersonName"
        android:text="@string/Update_Email"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:autofillHints="@string/up_phon"
        android:hint="@string/up_phon"
        android:inputType="textPersonName"
        android:text="@string/Update_phone"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <Spinner
        android:id="@+id/spinner11"
        android:layout_width="57dp"
        android:layout_height="21dp"
        android:layout_marginStart="235dp"
        android:layout_marginLeft="235dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="195dp"
        android:layout_height="33dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:autofillHints="@string/up_pass_hnt"
        android:hint="@string/up_pass_hnt"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/spinner11" />

    <Spinner
        android:id="@+id/spinner12"
        android:layout_width="194dp"
        android:layout_height="30dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <Spinner
        android:id="@+id/spinner13"
        android:layout_width="194dp"
        android:layout_height="30dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/spinner12" />

    <Spinner
        android:id="@+id/spinner14"
        android:layout_width="194dp"
        android:layout_height="30dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@+id/textView40"
        app:layout_constraintTop_toBottomOf="@+id/spinner13" />

    <Spinner
        android:id="@+id/spinner15"
        android:layout_width="194dp"
        android:layout_height="30dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView41"
        app:layout_constraintTop_toBottomOf="@+id/spinner14" />

    <Button
        android:id="@+id/button8"
        android:layout_width="119dp"
        android:layout_height="33dp"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Update_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner15" />

</androidx.constraintlayout.widget.ConstraintLayout>